# Vis

./: CMakeLists.txt  CpuGrayFilter.cpp  CpuGrayFilter.h  FilterManager.h  GpuGrayFilter.cu  GpuGrayFilter.h  IFilter.h  ISource.h  Image.h  ImageSource.cpp  ImageSource.h  ImageWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  VImageWidget.cpp  VImageWidget.h  main.cpp
.kdev4/: Vis.kdev4
Assembler/: lekcja1.txt
CudaProject/: CMakeLists.txt
CudaProject/src/common/exceptions/: IException.h
CudaProject/src/libvis/: Image.h  ImageFactory.cpp  Runner.h
CudaProject/src/libvis/matrix/: CMakeLists.txt  Matrix.cu  Matrix.h
CudaProject/src/plotter/: Plotter.cpp  Plotter.h
CudaProject/src/plotter_old/: CMakeLists.txt
CudaProject/src/video_converter/: QImageAdapter.cpp  QImageAdapter.h  VideoConverter.cpp  videoConverterWindow.ui
CudaProject/tests/cudaDeviceQuery/: main.cu
CudaProject/tests/cudaPerformanceTest/: main.cpp
CudaProject/tests/cudaPerformanceTest/gui/: MainWindow.ui
CudaProject/tests/libvisTests/: CMakeLists.txt  MatrixTests.cpp
CudaProject/tests/plotterTest/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
CudaProject/tests/videoConverter/: CMakeLists.txt
Kate/filebrowser/: CMakeLists.txt  katefilebrowser.cpp  katefilebrowser.h  katefilebrowsermodifiedplugin.desktop  katefilebrowserplugin.cpp
Make/: Common.cmake
exceptions/: CudaException.h
merge/: NetworkPlanIndication_IMdump.xml  asd.txt  imdump.xml  merge.kdev4  merge.py  merge.py.bak  merge.sh  merge2.py  new.xml  newimdump.xml  out.xml  sometest.py  tests.py
merge/.kdev4/: merge.kdev4
plotter/: CMakeLists.txt  Plot.cpp  Plot.h  Plotter.cpp  Plotter.h
src/: CMakeLists.txt  Image.cpp  ImageFactory.cpp  ImageFactory.h  MainWindow.cpp  main.cpp
src/common/: CMakeLists.txt  FormatHelper.h
src/exceptions/: NoFileException.h
src/experimental/: CMakeLists.txt  CMatrix.cpp  CMatrix.h  IImage.h  IMatrix.h  PMatrix.h
src/filters/: CMakeLists.txt  CpuGrayFilter.cpp  IFilter.h
src/filters/GrayFilter_cpu/: CpuGrayFilter.cpp  CpuGrayFilter.h
src/gui/: MainWindow.cpp  MainWindow.h
src/interfaces/: CMakeLists.txt  IImage.h
src/libs/plotter/: CMakeLists.txt  Legend.cpp  Legend.h  Plot.cpp  Plot.h  Plotter.cpp  Plotter.h  Points.cpp  Points.h
src/libs/plotter_old/: Plot.cpp  Plotter.h
src/libvis/: CMakeLists.txt  IImage.h  IImageFactory.h  ISource.h  Image.cpp  Image.h  ImageFactory.cpp  ImageFactory.h  ImageSource.cpp  ImageSource.h  testFilter.cpp  testFilter.h
src/libvis/cpu/: CMakeLists.txt  Image.cpp  Image.h  ImageTransform.cpp  ImageTransform.h
src/libvis/experimental/: IMatrix.h  ISimpleImage.h
src/libvis/filters/: CMakeLists.txt  FilterManager.h  IFilter.h
src/libvis/filters/GrayFilter_cpu/: CpuGrayFilter.cpp  CpuGrayFilter.h
src/libvis/filters/GrayFilter_gpu/: GpuGrayFilter.cu  GpuGrayFilter.h
src/libvis/gpu/: CMakeLists.txt  Common.h  GImage.cu  GImage.h  GImageTransform.cu  GImageTransform.h
src/libvis/matrix/: Matrix.cu  Matrix.h
src/plotter/: CMakeLists.txt  Plot.h  Plotter.cpp  Plotter.h
src/plotter_old/: Plot.h  Plotter.cpp
src/video_converter/: CMakeLists.txt  QImageAdapter.cpp  VideoConverter.cpp  VideoConverter.h  VideoConverterWindow.cpp  VideoConverterWindow.h  VideoConverterWindow.ui
tests/: PlotterTests.cpp
tests/cudaDeviceQuery/: CMakeLists.txt  main.cu
tests/cudaDeviceQuery/.kdev4/: WTF.kdev4
tests/cudaPerformanceTest/: CMakeLists.txt  config.h.in  main.cpp
tests/cudaPerformanceTest/gui/: ImageWidget.cpp  ImageWidget.h  MainWindow.cpp  MainWindow.h
tests/experimentalTests/: CMakeLists.txt  Matrix.cu  Matrix.h  exp.cu
tests/libvisTests/: CMakeLists.txt  imageCreationTests.cpp  imageTransformTests.cpp  testFunctions.cu  testFunctions.h
tests/plotterTest/: MainWindow.cpp  MainWindow.h
tests/videoConverter/: CMakeLists.txt  video.cpp
